--- a/闲聊对话.md
+++ b/闲聊对话.md
@@ -1,4 +1,5 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《PLATO: Pre-trained Dialogue Generation Model with Discrete Latent Variable》  | NULL |百度PLATO：<br/>三个损失；<br/>Fine-tuning阶段可以使用强化学习（只是设想？）； |done |NULL|
 | 《PLATO-2: Towards Building an Open-Domain Chatbot via Curriculum Learning》  | NULL |百度PLATO-2 |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
