--- a/文本改写&生成.md
+++ b/文本改写&生成.md
@@ -1,4 +1,5 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Get To The Point: Summarization with Pointer-Generator Networks》  | NULL |Manning经典论文;<br/>注意coverage问题（只看懂了方法-两个机制，但没看懂原理）； |done |NULL |
+| 《Rigid Formats Controlled Text Generation》  | ACL2020 |把约束添加到了transformer的位置编码上；<br/>类似GPT的生成； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
