--- a/文本改写&生成.md
+++ b/文本改写&生成.md
@@ -2,4 +2,5 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《Get To The Point: Summarization with Pointer-Generator Networks》  | NULL |Manning经典论文;<br/>注意coverage问题（只看懂了方法-两个机制，但没看懂原理）； |done |NULL |
 | 《Rigid Formats Controlled Text Generation》  | ACL2020 |带约束的文本生成；<br/>把约束添加到了transformer的位置编码上；<br/>类似GPT的生成； |done |NULL |
+| 《CGMH: Constrained Sentence Generation by Metropolis-Hastings Sampling》  | AAAI19 |基于MH采样；<br/>无监督句子改写，纠错；<br/>好像没用神经网络；<br/>原理没特别看懂； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
