--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -1,7 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《Neural Architectures for Fine-grained Entity Type Classification》  | ACL2017 |融合手动特征；<br/>融合层次信息； |done |NULL |
-| 《An attentive fine-grained entity typing model with latent type representation》  | ACL2019 |context和mention都经过attention处理；<br/>引入类别隐藏表示，并融入到预测中； |done |NULL |
-| 《Hierarchical Entity Typing via Multi-level Learning to Rank》  | ACL2020 |核心是引入了层次信息；<br/>也使用了类别信息的隐式表示； |done |NULL |
+| 《Neural Architectures for Fine-grained Entity Type Classification》  | ACL2017 |实体Typing：<br/>融合手动特征；<br/>融合层次信息； |done |NULL |
+| 《An attentive fine-grained entity typing model with latent type representation》  | ACL2019 |实体Typing：<br/>context和mention都经过attention处理；<br/>引入类别隐藏表示，并融入到预测中； |done |NULL |
+| 《Hierarchical Entity Typing via Multi-level Learning to Rank》  | ACL2020 |实体Typing：<br/>核心是引入了层次信息；<br/>也使用了类别信息的隐式表示； |done |NULL |
 | 《Deep Exhaustive Model for Nested Named Entity Recognition》  | EMNLP2018 |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
