--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -1,5 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息；<br/>在输入层融合信息（需要注意特征的形式，有些反直观）； |done |NULL |
 | 《Deep Exhaustive Model for Nested Named Entity Recognition》  | EMNLP2018 |NULL |NULL |NULL |
 | 《Neural Architectures for Fine-grained Entity Type Classification》  | ACL2017 |实体Typing：<br/>融合手动特征；<br/>融合层次信息； |done |NULL |
 | 《An attentive fine-grained entity typing model with latent type representation》  | ACL2019 |实体Typing：<br/>context和mention都经过attention处理；<br/>引入类别隐藏表示，并融入到预测中； |done |NULL |
