--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -1,9 +1,11 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息；<br/>在输入层融合信息（需要注意特征的形式，有些反直观）； |done |NULL |
-| 《Deep Exhaustive Model for Nested Named Entity Recognition》  | EMNLP2018 |NULL |NULL |NULL |
+| 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息：<br/>在输入层融合信息（需要注意特征的形式，有些反直观）； |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | 《Neural Architectures for Fine-grained Entity Type Classification》  | ACL2017 |实体Typing：<br/>融合手动特征；<br/>融合层次信息； |done |NULL |
 | 《An attentive fine-grained entity typing model with latent type representation》  | ACL2019 |实体Typing：<br/>context和mention都经过attention处理；<br/>引入类别隐藏表示，并融入到预测中； |done |NULL |
 | 《Hierarchical Entity Typing via Multi-level Learning to Rank》  | ACL2020 |实体Typing：<br/>核心是引入了层次信息；<br/>也使用了类别信息的隐式表示； |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| 《Deep Exhaustive Model for Nested Named Entity Recognition》  | EMNLP2018 |ACL2018 |嵌套命名实体识别： |NULL |
 | 《A Boundary-aware Neural Model for Nested Named Entity Recognition》  | ACL2019 |嵌套命名实体识别：<br/>先边界识别，再类别判断（多任务联合训练）；<br/>感觉训练应该比较慢，分类的设计会导致batch训练降低速度；<br/>CRF层引入效果反而降低，但论文中只有实验结果，没有原因； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
