--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -6,6 +6,6 @@
 | 《An attentive fine-grained entity typing model with latent type representation》  | ACL2019 |实体Typing：<br/>context和mention都经过attention处理；<br/>引入类别隐藏表示，并融入到预测中； |done |NULL |
 | 《Hierarchical Entity Typing via Multi-level Learning to Rank》  | ACL2020 |实体Typing：<br/>核心是引入了层次信息；<br/>也使用了类别信息的隐式表示； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
-| 《Deep Exhaustive Model for Nested Named Entity Recognition》  | EMNLP2018 |ACL2018 |嵌套命名实体识别： |NULL |
+| 《Deep Exhaustive Model for Nested Named Entity Recognition》  | ACL2018 |嵌套命名实体识别：<br/>窗口内完全遍历，然后分类；<br/>感觉训练应该比较慢，遍历分类的设计会导致batch训练降低速度；<br/>没有使用CRF层，但没特别说明原因； |done |NULL |
 | 《A Boundary-aware Neural Model for Nested Named Entity Recognition》  | ACL2019 |嵌套命名实体识别：<br/>先边界识别，再类别判断（多任务联合训练）；<br/>感觉训练应该比较慢，分类的设计会导致batch训练降低速度；<br/>CRF层引入效果反而降低，但论文中只有实验结果，没有原因； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
