--- a/文本分类.md
+++ b/文本分类.md
@@ -2,6 +2,7 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《Hierarchical Multi-Label Classification Networks》  | ICML2019 |层次分类；<br/>全局层次信息+局部层次信息；<br/>PRC评价；<br/>AVERAGE RANKING评价没看懂； |done |NULL |
 | 《Large-Scale Hierarchical Text Classification with Recursively Regularized Deep Graph-CNN》  | WWW2018	|层次分类；<br/>基于图网络的，层次化，文本分类；<br/>层次化信息，通过要求子分类与父分类的权重相近，正则化处理显现出来； |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | 《Joint Embedding of Words and Labels for Text Classification》  | ACL2018 |类别嵌入；<br/>引入分类类别信息，通过query和类别嵌入attention增强模型能力;<br/>通过这种方式可以获得类别嵌入; |done |NULL |
 | 《Enhancing Local Feature Extraction with Global Representation for Neural Text Classification》  | EMNLP2019 |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
