--- a/闲聊对话.md
+++ b/闲聊对话.md
@@ -2,4 +2,12 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《PLATO: Pre-trained Dialogue Generation Model with Discrete Latent Variable》  | ACL2020 |百度PLATO：<br/>核心是解决one-to-group问题；<br/>三个损失；<br/>Fine-tuning阶段可以使用强化学习（只是设想？）； |done |NULL|
 | 《PLATO-2: Towards Building an Open-Domain Chatbot via Curriculum Learning》  | NULL |百度PLATO-2：<br/>核心是引入课程学习； |done |NULL |
+| 《Improving Multi-turn Dialogue Modelling with Utterance ReWriter》  | ACL2019 |对话系统中，多伦对话合并改写 |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
