--- a/摘要生成.md
+++ b/摘要生成.md
@@ -4,8 +4,7 @@
 | 《Encode, Tag, Realize: High-Precision Text Editing》  | NULL |序列标注式的文本改写 |done |NULL |
 | 《Multi-Source Pointer Network for Product Title Summarization》  | NULL |阿里指针网络实践：<br/>使用原标题内容+商品/品牌词表; |done |NULL |
 | 《Abstractive Summarization: A Survey of the State of the Art》  | AAAI2019 |NULL |NULL |NULL |
-| 《Aspect-Aware Multimodal Summarization for Chinese E-Commerce Products》  | AAAI 2020 |京东多模态摘要生成（集大成者）：<br/>1 整体P(gen)+P(copy)的框架参考《Get To The Point: Summarization with Pointer-Generator Networks》<br/>2 指针网络同时融合了标题、图片、正文信息<br/>3 针对任务进行训练优化，参考《Reward Augmented Maximum Likelihood for Neural Structured Prediction》<br/>4 消除生成冗余参考《Get To The Point: Summarization with Pointer-Generator Networks》，同时，也用了自己的策略；<br/>5 保证生成的内容不会出对应错误，参考《Faithful to the Original: Fact Aware Neural Abstractive Summarization》
-《Ensure the Correctness of the Summary: Incorporate Entailment Knowledge into Abstractive Sentence Summarization》<br/>6 领域关键特性词挖掘，参考《Latent Aspect Rating Analysis on Review Text Data: A Rating Regression Approach》 |done |NULL |
+| 《Aspect-Aware Multimodal Summarization for Chinese E-Commerce Products》  | AAAI 2020 |京东多模态摘要生成（集大成者）：<br/>1 整体P(gen)+P(copy)的框架参考《Get To The Point: Summarization with Pointer-Generator Networks》<br/>2 指针网络同时融合了标题、图片、正文信息<br/>3 针对任务进行训练优化，参考《Reward Augmented Maximum Likelihood for Neural Structured Prediction》<br/>4 消除生成冗余参考《Get To The Point: Summarization with Pointer-Generator Networks》，同时，也用了自己的策略；<br/>5 保证生成的内容不会出对应错误，参考《Faithful to the Original: Fact Aware Neural Abstractive Summarization》《Ensure the Correctness of the Summary: Incorporate Entailment Knowledge into Abstractive Sentence Summarization》<br/>6 领域关键特性词挖掘，参考《Latent Aspect Rating Analysis on Review Text Data: A Rating Regression Approach》 |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
