--- a/图网络.md
+++ b/图网络.md
@@ -1,10 +1,23 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| NULL  | NULL |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Tackling Graphical NLP problems with Graph Recurrent Networks》  | Arxiv2019 |图网络在NLP中的应用；<br/>Linfeng Song 博士论文 |NULL |NULL |
+| 《阿尔伯塔大学博士毕业论文：基于图结构的自然语言处理》  | NULL |Bang Liu 博士论文 |NULL |https://mp.weixin.qq.com/s/BXovM5bHshLxdmBg93EQrA <br/> https://sites.ualberta.ca/~bang3/files/PhD-Thesis.pdf <br/> https://sites.ualberta.ca/~bang3/publication.html |
+| 《Convolutional Networks on Graphs for Learning Molecular Fingerprints》  | NIPS2015 |经典空域GCN（Neural FPs |NULL |NULL |
+| 《SEMI-SUPERVISED CLASSIFICATION WITH GRAPH CONVOLUTIONAL NETWORKS》  | ICLR2017 |经典频域GCN |NULL |NULL |
+| 《The graph neural network model》  | IEEE Transactions on Neural Networks 2009 |经典GNN |NULL |NULL |
+| 《Deepwalk: Online learning of social representations》  | SIGKDD 2014 |DeepWalk  is regarded as the first graph embedding method based on representation learning, applies
+SkipGram model on the generated random walks. |NULL |NULL |
+| 《HOW POWERFUL ARE GRAPH NEURAL NETWORKS?》  | ICLR2019 |GIN（哔哩哔哩上有视频讲解） |NULL |NULL |
+| 《Learning Convolutional Neural Networks for Graphs》  | ICML2016 |经典空域GCN（PATCHY-SAN，有官方PPT讲解） |NULL |NULL |
+| 《Graph Neural Networks:A Review of Methods and Applications》  | Arxiv2019 |GNN综述（清华孙茂松） |NULL |NULL |
+| 《A Comprehensive Survey on Graph Neural Networks》  | Arxiv2019 |GNN综述（IEEE fellow Zonghan Wu） |NULL |NULL |
+| 《Deep Learning on Graphs: A Survey》  | Arxiv2019 |GNN综述（清华朱文武） |NULL |NULL |
+| 《LINE: Large-scale Information Network Embedding》  | WWW2015 |图嵌入（公司推荐特征推荐使用） |NULL |NULL |
+| 《Graph Attention Networks》  | ICLR2018 |GAT |NULL |NULL |
+| 《struc2vec: Learning Node Representations from Structural Identity》  | NULL |NULL |NULL |NULL |
+| 《GraphSAINT: Graph Sampling Based Inductive Learning Method》  | ICLR2020 |NULL |NULL |NULL |
+| 《GraphSage: Graph Sampling Based Inductive Learning Method》  | NIPS2017 |NULL |NULL |NULL |
+| DROPEDGE: TOWARDS DEEP GRAPH CONVOLUTIONAL NETWORKS ON NODE CLASSIFICATION》  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
