--- a/文本分类.md
+++ b/文本分类.md
@@ -5,6 +5,7 @@
 | NULL  | NULL |NULL |NULL |NULL |
 | 《Joint Embedding of Words and Labels for Text Classification》  | ACL2018 |类别嵌入；<br/>引入分类类别信息，通过query和类别嵌入attention增强模型能力;<br/>通过这种方式可以获得类别嵌入; |done |NULL |
 | 《Enhancing Local Feature Extraction with Global Representation for Neural Text Classification》  | EMNLP2019 |NULL |NULL |NULL |
+| 《Description Based Text Classification with Reinforcement Learning》  | ICML2020 |基于强化学习和类别增强的文本分类；<br/>只看了知乎文章，没具体看paper； |done |https://zhuanlan.zhihu.com/p/112704633 |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
