--- a/文本质量.md
+++ b/文本质量.md
@@ -1,4 +1,13 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Cognitive Representation Learning of Self-Media Online Article Quality》  | NULL |NULL |done |https://mp.weixin.qq.com/s/cNgIuxMxB2Zu3RoaNpOVTQ |
+| 《Spam Review Detection with Graph Convolutional Networks》  | NULL |阿里闲鱼基于图网络的文本反垃圾 |done |NULL |
+| 《Abusive Language Detection with Graph Convolutional Networks》  | NULL |facebook基于图网络的文本反垃圾 |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
