--- a/推荐&广告&搜索.md
+++ b/推荐&广告&搜索.md
@@ -6,4 +6,11 @@
 | 《MOBIUS: Towards the Next Generation of Query-Ad Matching in Baidu’s Sponsored Search》  | KDD2019 |百度召回/排序二合一模型：<br/>解决召回和排序两阶段导致的目标不一致问题；<br/>基于teacher-student的active-learning机制；<br/>训练的模型主要为了产生user和ad的嵌入向量，召回基于向量检索； |done |NULL |
 | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》  | NULL |当前浏览器推荐召回使用方案 |NULL |NULL |
 | 《推荐系统调研报告及综述》  | NULL |对经典方法的总结 |done |http://yongfeng.me/attach/rs-survey-zhang.pdf |
+| 《bipartite graph neural networks for efficient node representation learning》  | NULL |商品推荐应用 |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
