--- a/主题模型.md
+++ b/主题模型.md
@@ -3,4 +3,13 @@
 | 《Hierarchical Topic Models and the Nested Chinese Restaurant Process》  | NULL |NULL |NULL |https://blog.csdn.net/hohaizx/article/details/94619576 |
 | 《Topic Modeling for Personalized Recommendation of Volatile Items》  | PKDD2010 |比较老的一篇;<br/>具体内容没特别看懂;<br/>应用在特殊场景的LDA优化（比如数据比较短）;<br/>重点是LDA，而不是推荐，推荐只是验证场景; |done |NULL |
 | 《Topic Memory Networks for Short Text Classification》  | EMNLP 2018 |腾讯AI Lab;<br/>神经主题模型+memory net+分类; |done |NULL |
+| 《Mixing Dirichlet Topic Models and Word Embeddings to Make lda2vec》  | CoNLL 2016 |LDA2Vec |NULL |NULL |
+| 《Federated Topic Modeling》  | International Conference on Information and Knowledge Management 2019 |Familia的扩展阅读；<br/>基于联邦学习做主题模型？ |NULL |NULL |
+| 《ATM:Adversarial-neural Topic Model》  | journal Information Processing & Management 2019 |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
