--- a/推荐&广告&搜索.md
+++ b/推荐&广告&搜索.md
@@ -7,7 +7,7 @@
 | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》  | NULL |当前浏览器推荐召回使用方案 |NULL |NULL |
 | 《推荐系统调研报告及综述》  | NULL |对经典方法的总结 |done |http://yongfeng.me/attach/rs-survey-zhang.pdf |
 | 《bipartite graph neural networks for efficient node representation learning》  | NULL |商品推荐应用 |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Wide & Deep Learning for Recommender Systems》  | arXiv2016 |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
