--- a/推荐&广告&搜索.md
+++ b/推荐&广告&搜索.md
@@ -8,7 +8,7 @@
 | 《推荐系统调研报告及综述》  | NULL |对经典方法的总结 |done |http://yongfeng.me/attach/rs-survey-zhang.pdf |
 | 《bipartite graph neural networks for efficient node representation learning》  | NULL |商品推荐应用 |NULL |NULL |
 | 《Wide & Deep Learning for Recommender Systems》  | arXiv2016 |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Semantic search on text and knowledge bases》  | 2016 |语义搜索，200多页，综述类型 |NULL |http://ad-publications.informatik.uni-freiburg.de/FNTIR_semanticsearch_BBH_2016.pdf |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
