--- a/文本向量化.md
+++ b/文本向量化.md
@@ -1,3 +1,12 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | FastText  | NULL |注意输入部分：字符嵌入？词根嵌入？ |NULL |https://research.fb.com/downloads/fasttext/ |
+| 《A Neural Probabilistic Language Model》  | JMLR2003 |Benjo的神经语言模型 |NULL |NULL |
+| 《Distributed Representations of Words and Phrases and their Compositionality》  | NIPS2013 |Mikolov Word2Vec |NULL |NULL |
+| 《Distributed Representations of Sentences and Documents》  | ICML2014 |Doc2Vec |NULL |NULL |
+| 《Universal Sentence Encoder for English》  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
