--- a/算法框架.md
+++ b/算法框架.md
@@ -3,6 +3,6 @@
 | 《NeuralClassifier: An Open-source Neural Hierarchical Multi-label Text Classification Toolkit》  | NULL |腾讯层次化分类工具 |done |NULL |
 | 《Familia: A Configurable Topic Modeling Framework for Industrial Text Engineering》  | Arxiv2018 |NULL |NULL |NULL |
 | 《LightLDA: Big Topic Models on Modest Computer Clusters》  | WWW2015 |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《DeepPavlov: Open-Source Library for Dialogue Systems》  | ACL2018 |NULL |NULL |NULL |
+| 《AllenNLP Interpret: A Framework for Explaining Predictions of NLP Models》  | EMNLP2019 |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
