--- a/模型可解释性.md
+++ b/模型可解释性.md
@@ -1,4 +1,14 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Why Should I Trust You? : Explaning the Predictions of Any Classifier》  | KDD2016 |NULL |done |NULL |
+| 《Analyzing and Interpreting Neural Networks for NLP: A Report on the First BlackboxNLP Workshop》  | 2019 |NLP可解释性 |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
