--- a/多模态.md
+++ b/多模态.md
@@ -2,4 +2,11 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《ERNIE-ViL: Knowledge Enhanced Vision-Language Representations Through Scene Graph》  | NULL |NULL |NULL |NULL |
 | 《VistaNet: Visual Aspect Attention Network for Multimodal Sentiment Analysis》  | AAAI2019 |形式非常简单;<br/>长文+文字attention+图文attention; |done |NULL |
+| 《Supervised Multimodal Bitransformers for Classifying Images and Text》  | NULL |低质项目中使用的多模态模型 |NULL |NULL |
+| 《Vilbert: Pretraining task-agnostic visiolinguistic representations for vision-and-language tasks》  | NIPS2019 |文本/图片多模态BERT |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
