--- a/数据增强.md
+++ b/数据增强.md
@@ -1,6 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks》  | NULL |NULL |NULL |NULL |
+| 《EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks》  | EMNLP2019 |四种操作：同义替换，随机插入，随机删除，随机交换；<br/>更试用于小样本场景； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
