--- a/文本预训练模型.md
+++ b/文本预训练模型.md
@@ -1,5 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《Pre-trained Models for Natural Language Processing: A Survey》  | Arxiv2020 |邱锡鹏预训练模型综述 |done |NULL |
 | 《Semi-supervised Sequence Learning》  | NIPS2015 |上下文信息预训练模型最早的论文 |done |NULL |
 | 《Semi-supervised sequence tagging with bidirectional language models》  | ACL2017 |AllenNLP，TagLM，ELMO的前身：<br/>加入语言模型信息; |NULL |NULL |
 | 《Universal Language Model Fine-tuning for Text Classification》  | ACL2018 |FastAI的ULMFiT; <br/>号称ELMO之前的，引入上下文的预训练模型：<br/>三阶段; |done |NULL |
