--- a/推荐&广告&搜索.md
+++ b/推荐&广告&搜索.md
@@ -2,7 +2,7 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《Deep Neural Networks for YouTube Recommendations》  | RecSys2016 |Youtubee深度推荐系统经典 |NULL |NULL |
 | 《Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features》  | KDD2016 |特征嵌入后，直接stacking（concat） |done |NULL |
-| 《Deep & Cross Network for Ad Click Predictions》  | ADKDD2017 |当前浏览器推荐排序使用方案;<br/>在deep&wide的框架下，替换wide：特征嵌入后做cross（区别FM）; |done |NULL |
+| 《Deep & Cross Network for Ad Click Predictions》  | ADKDD2017 |-排序使用方案;<br/>在deep&wide的框架下，替换wide：特征嵌入后做cross（区别FM）; |done |NULL |
 | 《MOBIUS: Towards the Next Generation of Query-Ad Matching in Baidu’s Sponsored Search》  | KDD2019 |百度召回/排序二合一模型：<br/>解决召回和排序两阶段导致的目标不一致问题；<br/>基于teacher-student的active-learning机制；<br/>训练的模型主要为了产生user和ad的嵌入向量，召回基于向量检索； |done |NULL |
 | 《Sampling-Bias-Corrected Neural Modeling for Large Corpus Item Recommendations 》  | NULL |-召回方案：<br/>双塔部分没创新，主要解决训练时的采样偏置问题； |done |NULL |
 | 《推荐系统调研报告及综述》  | NULL |对经典方法的总结 |done |http://yongfeng.me/attach/rs-survey-zhang.pdf |
