--- a/文本预训练模型.md
+++ b/文本预训练模型.md
@@ -13,7 +13,7 @@
 | 《UniLMv2: Pseudo-Masked Language Models for Unified Language Model Pre-Training》  | NULL |UniLM2： |NULL |NULL |
 | 《XLNet: Generalized Autoregressive Pretraining for Language Understanding》  | NIPS2019 |XLNet：<br/>没怎么看懂，看了很多博客，但还是不太清楚 |done |哈工大/讯飞联合实验室，开源中文XLNet预训练模型：<br> https://github.com/ymcui/Chinese-XLNet |
 | 《RoBERTa: A Robustly Optimized BERT Pretraining Approach》  | NULL |RoBERTa |NULL |哈工大/讯飞联合 git地址：<br/> https://github.com/ymcui/Chinese-BERT-wwm |
-| 《ALBERT: A Lite BERT for Self-supervised Learning of Language Representations》  | NULL |ALBERT |NULL |中文ALBERT：<br/> https://github.com/brightmart/albert_zh |
+| 《ALBERT: A Lite BERT for Self-supervised Learning of Language Representations》  | done |ALBERT:<br/>嵌入层因子分解；<br/>共享参数；<br/>句子连贯性预测； |done |中文ALBERT：https://github.com/brightmart/albert_zh ；<br/>https://www.zhihu.com/question/347898375/answer/863537122 <br/> https://mp.weixin.qq.com/s/LF8TiVccYcm4B6krCOGVTQ |
 | 《Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer》  | NULL |Google T5：<br>模型结构：Encoder-Decoder、Language model和Prefix LM;<br>注意力掩码机制：Casual、Casual prefix和Fully-visible;<br>预训练方法：语言模型式、Bert Mask式和Deshuffling;<br>Mask策略：Mask模式、Replace span模式和drop模式;<br>Mask比例：10%、15%、25%和50%四种;<br>Span长度：2、3、5和10四种;<br>训练策略：fine-tune、多任务学习、多任务fine-tune和Scaling; |done |博客参考：<br/> https://zhuanlan.zhihu.com/p/88727133 <br/> https://zhuanlan.zhihu.com/p/138235834|
 | 《Well-Read Students Learn Better: On the Importance of Pre-training Compact Models》  | arXiv2019 |NULL |NULL |Google官方蒸馏方法：<br/> github：https://github.com/google-research/bert |
 | 《Pre-Training with Whole Word Masking for Chinese BERT》  | arXiv2019 |主要是引入了WWM（Google官网只有英文的WWM，没有中文的） |done |git地址：<br/> https://github.com/ymcui/Chinese-BERT-wwm |
