--- a/信息流综述.md
+++ b/信息流综述.md
@@ -1,7 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《Deep Learning based Recommender System: A Survey and New Perspectives》  | ACM Computing Surveys 2018 |1 INTRODUCTION<br/> 2 OVERVIEW OF RECOMMENDER SYSTEMS AND DEEP LEARNING<br/> 3 DEEP LEARNING BASED RECOMMENDATION: STATE-OF-THE-ART<br/> 4 FUTURE RESEARCH DIRECTIONS AND OPEN ISSUES<br/> 5 CONCLUSION
- |done |NULL |
+| 《Deep Learning based Recommender System: A Survey and New Perspectives》  | ACM Computing Surveys 2018 |1 INTRODUCTION<br/> 2 OVERVIEW OF RECOMMENDER SYSTEMS AND DEEP LEARNING<br/> 3 DEEP LEARNING BASED RECOMMENDATION: STATE-OF-THE-ART<br/> 4 FUTURE RESEARCH DIRECTIONS AND OPEN ISSUES<br/> 5 CONCLUSION|done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
