--- a/机器学习&深度学习综述.md
+++ b/机器学习&深度学习综述.md
@@ -1,7 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《A State-of-the-Art Survey on Deep Learning Theory and Architectures》  | Electronics 2019 |深度学习综述：<br/> 1. Introduction<br/> 2. Deep Neural Network<br/> 3. Convolutional Neural Network (CNN)<br/> 4. Advanced Training Techniques<br/> 5. Recurrent Neural Network (RNN)<br/> 6. Auto-Encoder (AE) and Restricted Boltzmann Machine (RBM)<br/> 7. Generative Adversarial Networks (GAN)<br/> 8. Deep Reinforcement Learning (DRL)<br/> 9. Bayesian Deep Learning (BDL)<br/> 10. Transfer Learning<br/> 11. Energy Efficient Approaches and Hardware for DL<br/> 12. Hardware for DL<br/> 13. Other topics<br/> 14. Summary |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Deep Learning》  | Nature 2015 |三巨头在Nature的综述：<br/> 1 Supervised learning<br/> 2 Backpropagation to train multilayer architectures<br/> 3 Convolutional neural networks<br/> 4 Image understanding with deep convolutional networks<br/> 5 Distributed representations and language processing<br/> 6 Recurrent neural networks<br/> 7 The future of deep learning |done |https://www.researchgate.net/publication/277411157_Deep_Learning |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
