--- a/文本分类.md
+++ b/文本分类.md
@@ -8,7 +8,7 @@
 | 《Enhancing Local Feature Extraction with Global Representation for Neural Text Classification》  | EMNLP2019 |NULL |NULL |NULL |
 | 《Description Based Text Classification with Reinforcement Learning》  | ICML2020 |基于强化学习和类别增强的文本分类；<br/>只看了知乎文章，没具体看paper； |done |https://zhuanlan.zhihu.com/p/112704633 |
 | 《Document Modeling with Gated Recurrent Neural Network for Sentiment Classification》  | EMNLP2015 |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Neural Attentive Bag-of-Entities Model for Text Classification》  |  CoNLL 2019 | |1 融合实体信息的文本分类；<br/> 2 github有开源代码；<br/> 3 整体模型过于简单，只是基于词和实体的嵌入； |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
