--- a/推荐&广告&搜索.md
+++ b/推荐&广告&搜索.md
@@ -9,6 +9,7 @@
 | 《bipartite graph neural networks for efficient node representation learning》  | NULL |商品推荐应用 |NULL |NULL |
 | 《Wide & Deep Learning for Recommender Systems》  | arXiv2016 |NULL |NULL |NULL |
 | 《Semantic search on text and knowledge bases》  | 2016 |语义搜索，200多页，综述类型 |NULL |http://ad-publications.informatik.uni-freiburg.de/FNTIR_semanticsearch_BBH_2016.pdf |
+| 《SESSION-BASED RECOMMENDATIONS WITH RECURRENT NEURAL NETWORKS》| ICLR2016|基于RNN（LSTM）进行Session推荐：<br/>1 Session内的Item是固定的，只使用索引作为特征；<br/>2 MINI-BATCHES特殊处理（太短的Session，后面用其他Session补全）；<br/>3 特别的负样本采样；<br/>4 不同的损失函数；<br/>5 评测指标（Recall@20，MRR@20）？|done|NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
