--- a/知识图谱综述.md
+++ b/知识图谱综述.md
@@ -1,5 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《A Survey of Techniques for Constructing Chinese Knowledge Graphs and Their Applications 》| 2018|知识图谱综述（水文，蹭一带一路的热点）：<br/>1. OBOR Background；<br/>2. Knowledge Grap；<br/>3. Techniques of Constructing Chinese Knowledge Graphs；<br/>4. Applications of Chinese Knowledge Graphs；<br/>5. Impacts of Knowledge Graph on OBOR；<br/>6. Conclusions；|done|https://www.mdpi.com/2071-1050/10/9/3245|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
