--- a/文本向量化.md
+++ b/文本向量化.md
@@ -3,8 +3,9 @@
 | FastText  | NULL |注意输入部分：字符嵌入？词根嵌入？ |NULL |https://research.fb.com/downloads/fasttext/ |
 | 《A Neural Probabilistic Language Model》  | JMLR2003 |Benjo的神经语言模型 |NULL |NULL |
 | 《Distributed Representations of Words and Phrases and their Compositionality》  | NIPS2013 |Mikolov Word2Vec |NULL |NULL |
-| 《Distributed Representations of Sentences and Documents》  | ICML2014 |Doc2Vec |NULL |NULL |
 | 《Universal Sentence Encoder for English》  | NULL |NULL |NULL |NULL |
+| 《Distributed Representations of Sentences and Documents》| ICML2014|段向量：<br/>1 同word2vec一样存在CBOW和Skip-gram两种方案；<br/>2 段落向量要离线训练好，不可能实时训练获得；|done|NULL |
+| 《A Convolutional Neural Network for Modelling Sentences》| ACL2014|基于多层CNN的句子表示：<br/>1 不像经典的CNN，对字/词向量的整个维度进行卷积，而是，对每一维进行卷积。这样保证，卷积操作后，还是保持矩阵形式，进而，能进行多层卷积操作；<br/>2 处理卷积操作特殊外，也还引入了多种特殊的处理手段（单维度卷积、动态池化、折叠操作等）；|done|https://zhuanlan.zhihu.com/p/29925124|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
