--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -20,5 +20,6 @@
 | 《Joint Learning of Named Entity Recognition and Entity Linking》  | ACL2019 |实体识别与实体链接 |NULL |NULL |
 | 《Multilingual Named Entity Recognition Using Pretrained Embeddings, Attention Mechanism and NCRF》  | ACL2019 |基于BERT的NER(实体消歧) |done |NULL |
 | 《Hierarchically-Refined Label Attention Network for Sequence Labeling》  | NULL |用LAN替代CRF，提升解码速度 |NULL |NULL |
+| 《Fast and Accurate Entity Recognition with Iterated Dilated Convolutions》| EMNLP2017|基于空洞卷积的NER识别|done|NULL|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
