--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -1,6 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《A Survey on Deep Learning for Named Entity Recognition》  | Arxiv2018 |综述： |NULL |NULL |
+| 《A Survey on Deep Learning for Named Entity Recognition》| arXiv2020|NER综述：<br/>1 INTRODUCTION；<br/>2 BACKGROUND；<br/>3 DEEP LEARNING TECHNIQUES FOR NER；<br/>4 APPLIED DEEP LEARNING FOR NER；<br/>5 CHALLENGES AND FUTURE DIRECTIONS；<br/>6 CONCLUSION；|done|NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | 《Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data》  | NULL |余凯论文引用的CRF（将势函数，用转移矩阵代替） |done |NULL |
 | 《Bidirectional LSTM-CRF Models for Sequence Tagging》  | Arxiv2015 |余凯经典的BiLSTM+CRF，其中CRF没做特别的介绍，使用之前论文中提到的方法（将势函数，用转移矩阵替代） |done |NULL |
