--- a/文本相似度计算.md
+++ b/文本相似度计算.md
@@ -1,6 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《深度文本匹配综述》  | 2017 |NULL |NULL |NULL |
+| 《A Deep Look into Neural Ranking Models for Information Retrieval》| arXiv2019|文本相似度/检索综述：<br/>1. Introduction；<br/>2. Major Applications of Neural Ranking Models；<br/>3. A Unified Model Formulation；<br/>4. Model Architecture；<br/>5. Model Learning；<br/>6. Model Comparison；<br/>7. Trending Topics；<br/>8. Conclusion;|done|NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
