--- a/任务型对话.md
+++ b/任务型对话.md
@@ -1,7 +1,10 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《The Dialog State Tracking Challenge Series: A Review》| Microsoft 2016|DSTC比赛综述：<br/>1. Introduction；<br/>2. Dialog state tracking: problem definition；<br/>3. Methods for dialog state tracking；<br/>4. Challenge tasks；<br/>5. Challenge entries and results；<br/>6. Practical issues and lessons learned；<br/>7. Perspectives and Conclusion；|done|https://zhuanlan.zhihu.com/p/40988001|
+| 《MACHINE LEARNING FOR DIALOG STATE TRACKING:A REVIEW》| Google 2015|DST综述：<br/>1. INTRODUCTION；<br/>2. PROBLEM DEFINITION；<br/>3. RULE-BASED AND GENERATIVE DIALOG STATE TRACKING；<br/>4. MACHINE-LEARNED DISCRIMINATIVE DIALOG STATE TRACKING；<br/>5. EVALUATION；<br/>6. CONCLUSIONS；|done|STD面对的核心问题是，三个维度的信息如何融合/嵌入：<br/>1 时间信息；<br/>2 用户反馈信息（用户对话）；<br/>3 系统反馈信息（系统对话）；<br/>4 系统全局状态（status）；<br/>https://zhuanlan.zhihu.com|
 | 《Neural Approaches to Conversational AI Question Answering, Task-Oriented Dialogues and Social Chatbots》  | Arxiv2018 |NULL |NULL |NULL |
 | 《BERT for Joint Intent Classifification and Slot Filling》  | Arxiv2019 |NULL |NULL |NULL |
+| 《Deep Neural Network Approach for the Dialog State Tracking Challenge》| ACL2013|基于DNN的DST方案：<br/>1 基于DNN实现；<br/>2 针对每个slot创建一个模型；<br/>3 针对slot是否为v，进行二分类判断；<br/>4 系统、用户、全局status信息通过手工特征函数进行嵌入；<br/>5 时间信息直接输入DNN的输入层；|done|https://zhuanlan.zhihu.com/p/40988001|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
