--- a/贝叶斯神经网络.md
+++ b/贝叶斯神经网络.md
@@ -1,6 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Auto-Encoding Variational Bayes》| arXiv2014|VAE原理：<br/> 1神经网络可以拟合对特定分布的采样？；|NULL |https://zhuanlan.zhihu.com/p/161277762|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
