--- a/关键词提取.md
+++ b/关键词提取.md
@@ -1,7 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《基于文档主题结构的关键词抽取方法研究》  | 博士论文2011年 |刘知远/孙茂松;<br/>关键词提取；<br/>关键词与文章主题保持一致； |done |重点关注第三章，基于主题的关键词抽取；<br> http://nlp.csai.tsinghua.edu.cn/~lzy/publications/phd_thesis.pdf|
-| 《Topic-Aware Neural Keyphrase Generation for Social Media Language》  | ACL 2019 |腾讯AI Lab;<br/>神经主题模型+生成模型;<br/>比较有意思的部分，是神经网络中引入了整体分布（没用网络，主要是概率分布采样不能用网络模拟？） |done |NULL |
+| 《Topic-Aware Neural Keyphrase Generation for Social Media Language》| ACL2019|腾讯AI Lab,神经主题模型+生成模型的关键词生成：<br/>1 神经主题模型是现成的（已有人做了）；<br/>2 主题信息作为特征，传给后面的关键词生成模块；<br/>3 采用生成+抽取的方式产生关键词；|NULL |NULL |
 | 《Context-Aware Document Term Weighting for Ad-Hoc Search》  | NULL |NULL |NULL |NULL |
 | 《Title-Guided Encoding for Keyphrase Generation》  | AAAI2019 |把标题单独提出来作为特征和正文进行attention增强模型抽取能力; |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
