--- a/半监督学习.md
+++ b/半监督学习.md
@@ -2,7 +2,7 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《UNSUPERVISED DATA AUGMENTATION FOR CONSISTENCY TRAINING》  | NULL |NULL |NULL |NULL |
 | 《Data Programming:Creating Large Training Sets, Quickly》  | NIPS2016 |Snorkel |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Rethinking the Value of Labels for Improving Class-Imbalanced Learning》| NIPS2020|基于半监督+自监督的训练样本增强和优化：<br/>1 理论部分比较复杂，但操作相对简单；<br/> 2 半监督部分主要看2.2节，Semi-Supervised Imbalanced Learnin|NULL |https://zhuanlan.zhihu.com/p/259710601|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
