--- a/神经逻辑推理.md
+++ b/神经逻辑推理.md
@@ -1,6 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Cold-Start and Interpretability: Turning Regular Expressions into Trainable Recurrent Neural Networks》| EMNLP2020|FA-RNN：<br/>1 正则表达式->有限状态机->RNN|NULL |NULL |
+| 《Neural Logic Reasoning》| CIKM2020|基于神经网络的逻辑推理：<br/> 1 使用向量表示变量，使用神经网络拟合逻辑操作（如AND，OR，NOT）；|NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
