--- a/文本改写&生成.md
+++ b/文本改写&生成.md
@@ -3,4 +3,5 @@
 | 《Get To The Point: Summarization with Pointer-Generator Networks》  | NULL |Manning经典论文;<br/>注意coverage问题（只看懂了方法-两个机制，但没看懂原理）； |done |NULL |
 | 《Rigid Formats Controlled Text Generation》  | ACL2020 |带约束的文本生成；<br/>把约束添加到了transformer的位置编码上；<br/>类似GPT的生成； |done |NULL |
 | 《CGMH: Constrained Sentence Generation by Metropolis-Hastings Sampling》  | AAAI19 |基于MH采样；<br/>无监督句子改写，纠错；<br/>好像没用神经网络；<br/>原理没特别看懂； |done |NULL |
+| 《UNSUPERVISED PARAPHRASE GENERATION USING PRE-TRAINED LANGUAGE MODELS》| arXiv2020|基于GPT2的段落生成：<br/>1 训练过程：将原始句子去除停用词，然后，预测完整句子；<br/>2 预测过程：输入关键词，生成完整段落；|done|NULL |
 | NULL  | NULL |NULL |NULL |NULL |
