Update and rename 属性抽取&tag生成.md to 属性抽取.md

--- a/属性抽取.md
+++ b/属性抽取.md
@@ -1,5 +1,10 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Multimodal Attribute Extraction》  | NIPS2017 |有点像阅读理解：<br/>属性名嵌入+query（多模）嵌入→属性值；<br/>提供了任务数据集； |done |NULL |
-| 《Scaling Up Open Tagging from Tens to Thousands: Comprehension Empowered Attribute Value Extraction from Product Title》  | ACL2019 |阿里作品：<br/>属性名嵌入+query（多模）嵌入→属性值；<br/>主要从标题中抽取属性值； |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
