--- a/多模态.md
+++ b/多模态.md
@@ -6,6 +6,7 @@
 | 《VistaNet: Visual Aspect Attention Network for Multimodal Sentiment Analysis》  | AAAI2019 |形式非常简单;<br/>长文+文字attention+图文attention; |done |NULL |
 | 《Supervised Multimodal Bitransformers for Classifying Images and Text》  | NULL |Facebook多模态模型 |NULL |NULL |
 | 《Vilbert: Pretraining task-agnostic visiolinguistic representations for vision-and-language tasks》  | NIPS2019 |文本/图片多模态BERT |NULL |NULL |
+| 《Tensor fusion network for multimodal sentiment analysis》| EMNLP 2017|多模态融合TFN:<br/>1 多个模态的向量进行融合操作形成多维Tensor；<br/>2 注意每个维度增加的“1”，这样可以保留单维和双维特征；<br/>3 缺点是参数量巨大，注意体现在多模态融合的多维Tensor和后续接的Dense层；|NULL |《让机器读懂视频：亿级淘宝视频背后的多模态AI算法揭秘》|| 《Efficient Low-rank Multimodal Fusion with Modality-Specific Factors》| ACL 2018|多模态融合LMF:<br/>1 对TFN的优化；<br/>2 注意是对多模态融合Tensor和Dense参数进行分解，进而减少参数量和计算量；|NULL |《让机器读懂视频：亿级淘宝视频背后的多模态AI算法揭秘》|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
