--- a/标签体系&标签扩展&兴趣标签&概念标签.md
+++ b/标签体系&标签扩展&兴趣标签&概念标签.md
@@ -1,5 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《A User-Centered Concept Mining System for Query and Document Understanding at Tencent》  | KDD2019 |腾讯概念标签/图谱：<br/>概念挖掘；<br/>概念标记；<br/>层次结构构建； |done |https://zhuanlan.zhihu.com/p/85494010 |
-| 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》  | NULL |NULL |NULL |参考：<br/>https://zhuanlan.zhihu.com/p/148502336 <br/> https://www.sohu.com/a/385468264_500659 |
+| 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》  | SIGMOD 2020  |阿里概念图谱： |NULL |参考：<br/>https://zhuanlan.zhihu.com/p/148502336 <br/> https://www.sohu.com/a/385468264_500659 |
+| 《Octet: Online Catalog Taxonomy Enrichment with Self-Supervision》| KDD2020|分类体系自动扩展：<br/>1 主要分为子类发现和上位类关联两步；<br/>2 只使用之前的类别信息+用户输入和结果的点击信息；<br/>3 子类发现：使用序列标注；<br/>4 上位类关联：使用各种方式构建多维特征，然后，进行是否为上位类的二分类判断；|NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
