--- a/噪声标签.md
+++ b/噪声标签.md
@@ -1,9 +1,9 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《Confident Learning: Estimating Uncertainty in Dataset Labels》  | NULL |google开源的cleanlab；<br/>参考：https://zhuanlan.zhihu.com/p/146557232 ;<br/>没特别看懂; |done |NULL |
-| 《Co-teaching: Robust Training of Deep Neural Networks with Extremely Noisy Labels》  | NULL |NULL |NULL |NULL |
+| 《ehensive Introduction to Label Noise》| ESANN 2014|梳理了三种噪声标签的处理手段（主要是面对分类问题，整体比较水）：<br/>3.1 Label Noise-Robust Models；<br/>3.2 Data Cleansing Methods；<br/>3.3 Label Noise-Tolerant Learning Algorithms（没太看懂）；|NULL |https://www.cs.bham.ac.uk/~axk/ESANNtut.pdf|
+| 《Classification in the Presence of Label Noise: a Survey》| IEEE TRANSACTIONS ON NEURAL NETWORKS AND LEARNING SYSTEMS 2014|《ehensive Introduction to Label Noise》综述的同作者详细版本：<br/>I. INTRODUCTION；<br/>II. DEFINITION, SOURCES, AND TAXONOMY OF LABEL NOISE；<br/>III. CONSEQUENCES OF LABEL NOISE ON LEARNING；<br/>IV. METHODS TO DEAL WITH LABEL NOISE；<br/>V. LABEL NOISE-ROBUST MODELS；<br/>VI. DATA CLEANSING METHODS FOR LABEL NOISE-POLLUTED DATASETS；<br/>VII. LABEL NOISE-TOLERANT LEARNING ALGORITHMS；<br/>VIII. EXPERIMENTS IN THE PRESENCE OF LABEL NOISE<br/>IX. CONCLUSION；|NULL |https://romisatriawahono.net/lecture/rm/survey/machine%20learning/Frenay%20-%20Classification%20in%20the%20Presence%20of%20Label%20Noise%20-%202014.pdf|
+| 《Image Classification with Deep Learning in the Presence of Noisy Labels: A Survey》| arXiv 2020|侧重深度学习的噪声标签综述（和图像的关系好像并不大）：<br/>I. INTRODUCTION；<br/>II. PRELIMINARIES；<br/>III. NOISE MODEL BASED METHODS；<br/>IV. NOISE MODEL FREE METHODS；<br/>V. CONCLUSION；|NULL |NULL |
+| 《Confident Learning: Estimating Uncertainty in Dataset Labels》| arXiv2019|cleanlab:<br/>1 Count：估计噪声标签和真实标签的联合分布;<br/>2 Clean：找出并过滤掉错误样本;<br/>3 Re-Training：过滤错误样本后，重新训练（采用Co-Teaching，是因为剩余的训练数据中仍然存在噪声？）;|NULL |https://zhuanlan.zhihu.com/p/146557232|
+| 《Co-teaching: Robust Training of Deep Neural Networks with Extremely Noisy Labels》| NIPS 2018|基于两个网络交互的噪声数据训练方法（cleanlab使用了）：<br/>1 创建两个网络；<br/>2 每个网络输入所有数据并选择一些可能干净的标签数据;<br/>3 两个网络相互通信这个批量中应该用于训练的数据;<br/>4 每个网络反向传播另一个网络挑选的数据并更新自己;|NULL|https://zhuanlan.zhihu.com/p/65632321|
 | 《Learning with Noisy Label-深度学习廉价落地》  | 知乎 |噪声标签综述&资料汇总;<br/>涉及多篇文章，没仔细细看； |NULL |NULL |
-| 《Learning Deep Latent Spaces for Multi-Label Classification》  | AAAI2017 |多标签分类；<br/>没特别看懂；<br/>数学+网络；<br/>类别嵌入；<br>针对标签残缺，设计特别的损失函数；<br/>知乎参考：https://zhuanlan.zhihu.com/p/107962319 |done |NULL |
-| 《Extreme Multi-label Loss Functions for Recommendation,Tagging, Ranking & Other Missing Label Applications》  | KDD2016 |多标签分类；<br/>大规模、标签确实、数据稀疏；<br/>主要是对损失函数做了处理； |done |NULL |
-| 《基于不完整标签信息的多标签分类问题研究》  | 硕士论文2019 |多标签分类；<br/>标签不完整的分类+半监督分类；<br/>先通过算法打纠正后的预标签，然后，再继续训练模型； |done |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
